--- a/WebApp/src/app/features/pims/employeebasicinfo/employeebasicinfo.component.html
+++ b/WebApp/src/app/features/pims/employeebasicinfo/employeebasicinfo.component.html
@@ -443,8 +443,8 @@
                         </form>
                             <div class="flex justify-content-end pr-2">
                                 <button pButton pRipple type="button" (click)="openPrev()" label="Previous" class="risBtn mr-2 mb-2" icon="pi pi-step-backward"></button>
-                                <button pButton pRipple type="button" (click)="onFormSubmit()" label="Save" class="risBtn risSave mr-2 mb-2" icon="pi pi-check"></button>
-                                <button pButton pRipple type="button" (click)="openNext()" label="Next" class="risBtn  mr-2 mb-2" icon="pi pi-step-forward"></button>
+                                <!--<button pButton pRipple type="button" (click)="onFormSubmit()" label="Save" class="risBtn risSave mr-2 mb-2" icon="pi pi-check"></button>-->
+                                <button pButton pRipple type="button" (click)="onNext()" label="Next" class="risBtn  mr-2 mb-2" icon="pi pi-step-forward"></button>
                                 <button pButton pRipple type="button" (click)="toggleFormClose()" label="Close" class="risBtn risClose mr-2 mb-2" icon="pi pi-times"></button>
                             </div>
                      
