--- a/WebApp/src/app/features/Procurement/supplierassessment/supplierassessment.component.html
+++ b/WebApp/src/app/features/Procurement/supplierassessment/supplierassessment.component.html
@@ -746,9 +746,9 @@
                                                         <ng-template pTemplate="input">
                                                             <input pInputText type="number" [(ngModel)]="criteria.actual_weight" required>
                                                         </ng-template>
-                                                        <ng-template pTemplate="output">
+                                                        <!--<ng-template pTemplate="output">
                                                             {{criteria.actual_weight}}
-                                                        </ng-template>
+                                                        </ng-template>-->
                                                     </p-cellEditor>
                                                 </td>
                                                 <td pEditableColumn>
@@ -851,6 +851,7 @@
                             <th pSortableColumn="MobileNo">Short Name</th>
                             <th pSortableColumn="MobileNo">Mobile No</th>
                             <th pSortableColumn="Email">Email</th>
+                            <th>Status</th>
                             <th>Action</th>
                         </tr>
                     </ng-template>
@@ -861,7 +862,10 @@
                             <td>{{supplierinfo.ShortName}}</td>
                             <td>{{supplierinfo.MobileNo}}</td>
                             <td>{{supplierinfo.Email}}</td>
-                            <td> <button class="pi pi-pencil risBtn risView mr-2" (click)="viewDocumentinfo(rowIndex,supplierinfo)"> View </button></td>
+                            <td class="text-orange-400" *ngIf="!supplierinfo.is_verified">{{"Pending Assessment"}}</td>
+                            <td> <button class="pi pi-pencil risBtn risView mr-2" (click)="viewDealerinfo(rowIndex,supplierinfo)"> View </button></td>
+
+                            <!--<td> <button class="pi pi-pencil risBtn risView mr-2" (click)="viewDocumentinfo(rowIndex,supplierinfo)"> View </button></td>-->
                         </tr>
                     </ng-template>
                 </p-table>
