--- a/WebApp/src/app/features/pims/employeebasicinfo/employeebasicinfo.component.html
+++ b/WebApp/src/app/features/pims/employeebasicinfo/employeebasicinfo.component.html
@@ -2,7 +2,7 @@
     <div class="col-12">
         <div class="card">
             <!--<h4>Employee Information</h4>-->
-            <h5>Employee List</h5>
+            <h4>Employee Information</h4>
             <!--<div class="me-auto">-->
             <div [hidden]="formDisplay">
 
@@ -169,43 +169,24 @@
                                     </div>
                                     <div class="field col-12 md:col-6">
                                         <label for="" class=" d-md-inline-flex" pTooltip="National ID" tooltipPosition="top">National ID <span class="req">*:</span> </label>
-                                        <!--</div>
-                <div class="col-5 p-fluid">-->
-                                        <!--<span class="p-float-label">-->
+                                       
                                         <input id="float-input p-fluid" type="text" formControlName="national_id" [ngClass]="{ 'is-invalid': submitted && f.national_id.errors }" placeholder="National ID" pInputText>
                                         <div *ngIf="submitted && f.national_id.errors" class="invalid-feedback">
                                             <small *ngIf="f.national_id.errors.required" class="p-error">National ID is required</small>
                                         </div>
-                                        <!--</span>-->
-                                        <!--</div>
-                <div class="col-3 p-fluid">-->
-                                        <!--<p-fileUpload mode="basic" name="myfile[]" url="./upload.php" accept="image/*" maxFileSize="1000000" (onUpload)="onSelectImage($event)"></p-fileUpload>-->
-                                        <!--<img class="risBtn m-1" [src]="filellink" style="width: 50px; height:30px;" alt="">
-                <input type="file" class="fileInput risBtn risAdd " style="width: 140px; " #nationalIdFile (change)="onSelectFile($event)">-->
-                                    </div>
+                                      </div>
                                     <div class="field col-12 md:col-6">
                                         <label for="" class=" d-md-inline-flex" pTooltip="Birth Certificate" tooltipPosition="top">Birth ID : </label>
 
                                         <input id="float-input p-fluid" type="text" formControlName="birth_id" placeholder="Birth Certificate No" pInputText>
 
                                     </div>
-                                    <!--<div class="col-3 p-fluid">
-
-                <img class="risBtn m-1" [src]="filellink" style="width: 50px; height:30px;" alt="">
-                <input type="file" class="fileInput risBtn risAdd " style="width: 140px; " #nationalIdFile (change)="onSelectFile($event)">
-            </div>-->
+                                    
                                     <div class="field col-12 md:col-6">
                                         <label for="" class=" d-md-inline-flex" pTooltip="Passport No" tooltipPosition="top">Passport No  </label>
-                                        <!--</div>
-                <div class="col-5 p-fluid">
-                    <span class="p-float-label">-->
+                                       
                                         <input id="float-input p-fluid" type="text" formControlName="passport_no" placeholder="Passport No" pInputText>
-                                        <!--</span>
-                </div>
-                <div class="col-3 p-fluid">-->
-                                        <!--<p-fileUpload mode="basic" name="myfile[]" url="./upload.php" accept="image/*" maxFileSize="1000000" (onUpload)="onSelectImage($event)"></p-fileUpload>-->
-                                        <!--<img class="risBtn m-1" [src]="filellink" style="width: 50px; height:30px;" alt="">
-                <input type="file" class="fileInput risBtn risAdd " style="width: 140px; " #nationalIdFile (change)="onSelectFile($event)">-->
+                                       
                                     </div>
                                     <div class="field col-12 md:col-6">
                                         <label for="" class=" d-md-inline-flex" pTooltip="Driving License No" tooltipPosition="top">Driving License No: </label>
@@ -213,10 +194,7 @@
                                         <input id="float-input p-fluid" type="text" formControlName="driving_license_no" placeholder="Driving License No" pInputText>
 
                                     </div>
-                                    <!--<div class="col-3 p-fluid">
-                <img class="risBtn m-1" [src]="filellink" style="width: 50px; height:30px;" alt="">
-                <input type="file" class="fileInput risBtn risAdd " style="width: 140px; " #nationalIdFile (change)="onSelectFile($event)">
-            </div>-->
+                                   
                                     <div class="field col-12 md:col-6">
                                         <label for="" class=" d-md-inline-flex" pTooltip="Nationality" tooltipPosition="top">Nationality <span class="req">*:</span> </label>
 
@@ -267,12 +245,6 @@
                                             <small *ngIf="f.ethnicity_id.errors.required" class="p-error">Blood Group is required</small>
                                         </div>
                                     </div>
-
-
-
-                                    <!--<div class="p-fluid grid col-6 flex justify-content-start flex-wrap card-container">-->
-
-
                                     <div class="field col-12 md:col-6">
                                         <label for="" class=" d-md-inline-flex" pTooltip="Residential Status" tooltipPosition="top">Residential Status: </label>
 
@@ -299,17 +271,12 @@
                     <p-tabPanel  header="Address">
                         <form action="" [formGroup]="employeeForm">
                             <div class="col-12">
-
                                 <div class="p-fluid p-formgrid grid">
                                     <div class="field col-12 md:col-12">
-
-                                        <h5>Present Address</h5>
+                                        <h4>Present Address</h4>
                                     </div>
-
                                     <div class="field col-12 md:col-6">
-
                                         <label pTooltip="Country" tooltipPosition="top">Country<span class="req">*</span></label>
-
                                         <p-dropdown [options]="drpdwnPresentCountryList" formControlName="present_country_id" [ngClass]="{ 'is-invalid': submitted && f.present_country_id.errors }" placeholder="---Select---"
                                                     optionLabel="country_name" optionValue="country_id" (onChange)="onSelectByPresentCountryId($event.value)" [showClear]="true" [filter]="true" filterBy="country_name"></p-dropdown>
                                   
@@ -329,9 +296,7 @@
                                         <p-dropdown [options]="drpdwnPresentDistrictList" formControlName="present_district_id" [ngClass]="{ 'is-invalid': submitted && f.present_district_id.errors }" placeholder="---Select---"
                                                     optionLabel="district_name" optionValue="district_id" [showClear]="true">
                                         </p-dropdown>
-                                        <!--<div *ngIf="submitted && f.present_district_id.errors" class="invalid-feedback">
-                    <small *ngIf="f.present_district_id.errors.required" class="p-error">District is required</small>
-                </div>-->
+                                     
                                     </div>
                                     <div class="field col-12 md:col-6">
                                         <label for="" class=" d-md-inline-flex" pTooltip="City/Town" tooltipPosition="top">City/Town<span class="req">*:</span> </label>
@@ -374,21 +339,17 @@
                                     </div>
 
                                     <hr />
-                                    <h5>Permanent Address</h5>
-
-                                    <!--<div class="p-fluid grid col-12 flex flex-wrap card-container">-->
+                                    <h4>Permanent Address</h4> 
                                     <div class="field col-12 md:col-12">
                                         <!--<p-checkbox [(ngModel)]="checked" binary="true" label="Same As Present Address" (onChange)="sameAddress($event)" inputId="binary"></p-checkbox>-->
                                         <p-checkbox binary="true" label="Same As Present Address" (onChange)="sameAddress($event)" inputId="binary"></p-checkbox>
 
-                                    </div>
-                                    <!--<div class="p-fluid grid col-6 flex justify-content-start flex-wrap card-container">-->
+                                    </div> 
                                     <div class="field col-12 md:col-6">
                                         <label for="" class=" d-md-inline-flex" pTooltip="Country" tooltipPosition="top">Country :</label>
                                         <p-dropdown [options]="drpdwnPermanentCountryList" formControlName="permanent_country_id" placeholder="---Select---"
                                                     optionLabel="country_name" optionValue="country_id" (onChange)="onSelectByPermanentCountryId($event.value)" [showClear]="true" [filter]="true" filterBy="country_name">
-                                        </p-dropdown>
-
+                                        </p-dropdown> 
                                     </div>
                                     <div class="field col-12 md:col-6">
                                         <label for="" class=" d-md-inline-flex" pTooltip="State/Division" tooltipPosition="top">State/Division :</label>
@@ -442,15 +403,11 @@
                             </div>
                         </form>
                             <div class="flex justify-content-end pr-2">
-                                <button pButton pRipple type="button" (click)="openPrev()" label="Previous" class="risBtn mr-2 mb-2" icon="pi pi-step-backward"></button>
-                                <!--<button pButton pRipple type="button" (click)="onFormSubmit()" label="Save" class="risBtn risSave mr-2 mb-2" icon="pi pi-check"></button>-->
+                                <button pButton pRipple type="button" (click)="openPrev()" label="Previous" class="risBtn mr-2 mb-2" icon="pi pi-step-backward"></button>                                
                                 <button pButton pRipple type="button" (click)="onNext()" label="Next" class="risBtn  mr-2 mb-2" icon="pi pi-step-forward"></button>
                                 <button pButton pRipple type="button" (click)="toggleFormClose()" label="Close" class="risBtn risClose mr-2 mb-2" icon="pi pi-times"></button>
-                            </div>
-                     
-                    </p-tabPanel>
-
-                   
+                            </div> 
+                    </p-tabPanel> 
                     <p-tabPanel header="Official Information">
                         <form action="" [formGroup]="employeeOfficialForm">
                             <div class="col-12">
@@ -584,14 +541,8 @@
 
 
             <div [hidden]="gridDisplay">
-                <!--<button class="risBtn risAdd mr-2 mb-2" icon="pi pi-plus" label="New" (click)="btnNew()"></button>-->
-                <button pButton pRipple type="button" (click)="showBasicDialog()" label="New" icon="pi pi-plus" class="risBtn risAdd mr-2 mb-2"></button>
-                <!--<button class="pi pi-pencil risBtn risEdit mr-2 " (click)="loadEmployeeToEdit()"> Edit</button>-->
-                <button pButton pRipple type="button" (click)="loadEmployeeToEdit()" label="Edit" icon="pi pi-pencil" class="risBtn risEdit mr-2 mb-2"></button>
-                <!--<button class="pi pi-trash risBtn risDelete mr-2" (click)="showDialog()"> Delete</button>-->
-                <button pButton pRipple type="button" (click)="showDialog()" label="Delete" icon="pi pi-trash" class="risBtn risDelete mr-2 mb-2"></button>
-                <button pButton pRipple type="button" (click)="employeeActiveInactive()" label="Activity" icon="pi pi-box" class="risBtn risAll mr-2 mb-2"></button>
-                <!--<button class="pi pi-box risBtn risAll  mr-2" (click)="employeeActiveInactive()"> Activity</button>-->
+               
+                   
                 <p-dialog header="Delete Record" [(visible)]="display" [style]="{width: '35vw'}">
                     <p>Do you want to delete this record?</p>
                     <ng-template pTemplate="footer">
@@ -599,11 +550,15 @@
                         <button class="pi pi-check risBtn risSave" (click)="deleteEmployee()"> Yes</button>
                     </ng-template>
                 </p-dialog>
-                <p-table #dt1 [value]="employeeList" [paginator]="true" [rows]="10" selectionMode="single" [(selection)]="selectedemployee" dataKey="EmployeeId" [showCurrentPageReport]="true" responsiveLayout="scroll" styleClass="p-datatable-striped p-datatable-sm"
+                <p-table #dt1 [value]="employeeList" [paginator]="true" [rows]="10" selectionMode="single" [(selection)]="selectedemployee" dataKey="EmployeeId" [showCurrentPageReport]="true" responsiveLayout="scroll" styleClass="p-datatable-striped p-datatable-sm p-datatable-gridlines"
                          currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [rowsPerPageOptions]="[10,25,50]" (onRowSelect)="onRowSelect($event)" (onRowUnselect)="onRowUnselect($event)"
                          [globalFilterFields]="['Code','EmployeeName','PersonalPhone','PersonalEmail','PresentAddressNote']">
                     <ng-template pTemplate="caption">
                         <div class="flex">
+                            <button pButton pRipple type="button" (click)="showBasicDialog()" label="New" icon="pi pi-plus" class="risBtn risAdd mr-2 mb-2"></button>
+                            <button pButton pRipple type="button" (click)="loadEmployeeToEdit()" label="Edit" icon="pi pi-pencil" class="risBtn risEdit mr-2 mb-2"></button>
+                            <button pButton pRipple type="button" (click)="showDialog()" label="Delete" icon="pi pi-trash" class="risBtn risDelete mr-2 mb-2"></button>
+                            <button pButton pRipple type="button" (click)="employeeActiveInactive()" label="Activity" icon="pi pi-box" class="risBtn risAll mr-2 mb-2"></button>
 
                             <span class="p-input-icon-left ml-auto">
                                 <i class="pi pi-search"></i>
